--- a/styles.css
+++ b/styles.css
@@ -527,6 +527,9 @@
             color: var(--primary);
             position: relative;
             overflow: hidden;
+            background-image: url("image.jpg");
+            background-position: center;
+            background-size: contain;
         }
 
         .avatar-inner::before {
@@ -1842,4 +1845,5 @@
             }
 
         }
+
 
